<resources>


    <string name="app_name">Smart Scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Scanner</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_save">Save</string>
    <string name="msg_file">File is being created..</string>

    <string name="no_data_available">Files not found</string>
    <string name="creating_pdf">Creating file</string>

    <string name="menu_selectAll">SELECT ALL</string>
    <string name="menu_unselectAll">UNSELECT ALL</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_move">Move</string>

    <string name="file_provider_authority" translatable="false">com.mojodigi.smartcamscanner</string>
    <string name="delfiles">files</string>
    <string name="delfolders">folders</string>
    <string name="delfile">file</string>
    <string name="delfolder">folder</string>

    <string name="filter_file_name" translatable="false">%s_%s.jpg</string>

    <string name="action_sort">Sort</string>

    <string name="action_search">Search</string>
    <string name="loading_msg">Loading...</string>
    <string name="save_current">Save</string>
    <string name="save_countinue">Save &amp; Countinue</string>
    <string name="done">Done</string>
    <string name="savetxt">Save</string>
    <string name="skip_text">Skip</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="save_first">Save Current Image First</string>
    <string name="i_have_attached_pdfs_to_this_message">I have attached file(s) to this message</string>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="merge_file_select">Select a file</string>
    <string name="actions_name">Enter file name</string>
    <string name="actions_create">Create folder</string>
    <string name="folder_success">folder created successfully</string>
    <string name="file_success">file created successfully</string>
    <string name="folder_failure">Error while folder creation</string>
    <string name="file_failure">Error while file creation</string>
    <string name="ok_txt">Ok</string>
    <string name="actions_rename">Rename</string>
    <string name="save">SAVE</string>

    <string name="namerequired">Name is required</string>
    <string name="emty_error">can not be empty</string>
    <string name="create_txt">Create</string>
    <string name="cancel_txt">Cancel</string>
    <string name="addfolder_txt">Add folder</string>
    <string name="cropImage_activityTitle">Crop Image</string>
    <string name="previous_image_content_desc">Previous Image</string>
    <string name="showing_image">Showing %1$d of %2$d image(s)</string>
    <string name="image_count"> 1 of 2</string>
    <string name="nextimage_contentdesc">Next Image</string>

    <string name="directorynotfound">Could not find the directory"</string>
    <string name="filenotfound">Cound not get the file to hide</string>
    <string name="encmsg">Wait...</string>
    <string name="decmsg">Preparing files...</string>
    <string name="password_hint">Write password</string>
    <string name="cpassword_hint">Confirm password</string>
    <string name="setpassword">Set password</string>
    <string name="filenotcreated">file  not created</string>
    <string name="passwordnotmatch">Password does not match</string>
    <string name="type_password">type a password</string>
    <string name="Incrct_pswd">Incorrect password</string>
    <string name="encrypt_heading">Locked files</string>
    <string name="password">write password</string>
    <string name="unlocktxt">Unlock</string>
    <string name="password_create_error">can\'t create password</string>

    <string-array name="array_page_sizes_a0_b10" translatable="false">
        <item>A0 (2384 x 3370)</item>
        <item>A1 (1684 x 2384)</item>
        <item>A2 (1191 x 1684)</item>
        <item>A3 (842 x 1191)</item>
        <item>A4 (595 x 842)</item>
        <item>A5 (420 x 595)</item>
        <item>A6 (297 x 420)</item>
        <item>A7 (210 x 297)</item>
        <item>A8 (148 x 210)</item>
        <item>A9 (105 x 148)</item>
        <item>A10 (73 x 105)</item>
    </string-array>

    <string name="b0_to_b10">B0 to B10</string>
    <string name="a0_to_a10">A0 to A10</string>
    <string name="tabloid">TABLOID</string>
    <string name="executive">EXECUTIVE</string>
    <string name="ledger">LEDGER</string>
    <string name="letter">LETTER</string>
    <string name="legal">LEGAL</string>
    <string name="a4">A4</string>
    <string name="default_page_size">DEFAULT ( %s )</string>

    <string name="set_as_default">Set as default</string>

    <string-array name="array_page_sizes_b0_b10" translatable="false">
        <item>B0 (2834 x 4008)</item>
        <item>B1 (2004 x 2834)</item>
        <item>B2 (1417 x 2004)</item>
        <item>B3 (1000 x 1417)</item>
        <item>B4 (708 x 1000)</item>
        <item>B5 (498 x 708)</item>
        <item>B6 (354 x 498)</item>
        <item>B7 (249 x 354)</item>
        <item>B8 (175 x 249)</item>
        <item>B9 (124 x 175)</item>
        <item>B10 (87 x 124)</item>
    </string-array>


    <!-- demo add ids -->
    <!--
<string name="admob_app_id">ca-app-pub-5603925957932903~3576315291</string>
<string name="banner_add_id">ca-app-pub-3940256099942544/6300978111</string>
<string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
<string name="ad_unit_id_reward">ca-app-pub-3940256099942544/5224354917</string>
-->
    <!-- demo add ids -->

    <!--actual add id for FileHunt runningAccount -->

    <string name="admob_app_id" translatable="false">ca-app-pub-7769757158085259~2218192747</string>
    <string name="banner_add_id" translatable="false">ca-app-pub-7769757158085259/4065874309</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-7769757158085259/5753526349</string>
    <string name="ad_unit_id_reward" translatable="false">ca-app-pub-7769757158085259/5906156319</string>

    <!--actual add id for FileHunt runningAccount -->



    <string name="document_scann_lib_name" translatable="false">ScanLibrary</string>


    <string name="finish">Finish</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="cant_crop">Can\'t crop the image, change the points</string>
    <string name="transforming">Transforming...</string>

    <string name="mode_none">None</string>
    <string name="mode_black_white">Black &amp; White</string>
    <string name="mode_magic">Magic</string>


    <string name="scanfile">Please scan a file to save</string>
    <string name="can_not_blank">file name can\'t be blank</string>

    <string name="fileerror">Error while creating File</string>
    <string name="pathnotexist">file path does not exists</string>
    <string name="no_file_to_share">No files to share</string>
    <string name="rename_success">rename success</string>
    <string name="can_not_delete">can\'t be deleted</string>
    <string name="rename_error">Error while renaming file </string>
    <string name="gotopermissions">Go to Permissions to Grant storage access</string>
    <string name="need_permission">Need Permissions</string>
    <string name="permission_required"> applicartion need stoarge permission.</string>
    <string name="grant">Grant</string>
    <string name="unable_to_get_permission">Unable to get Permission</string>
    <string name="scan_again">Please scan again"</string>
    <string name="resultnotfound">Result Not Found</string>
    <string name="foldernotfound">folder does not exist</string>
    <string name="rename">Rename</string>
   <string name="filenotexist">File does not exist</string>
    <string name="details">Details</string>
    <string name="filecount">Number of files</string>
<string name="totalsize">Total size</string>
    <string name="close">Close</string>
    <string name="saveto">Save to</string>
    <string name="select_format">Select format</string>
    <string name="newversionavlbl">New version is available.</string>
    <string name="new_version_txt">There is new version of this application available, click UPDATE NOW to update.</string>
    <string name="later">Later</string>
    <string name="update">Update  Now </string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="size">Size</string>
    <string name="orientation">Orientation</string>
    <string name="resolution">Resolution</string>
    <string name="date">Date</string>

   <string name="scanned">Scanned file</string>
    <string name="files">Files</string>
    <string name="reorder">Reorder</string>
    <string name="scan_result">Scan result</string>
    <string name="home">Home</string>
   <string name="enter_folder_name">Enter folder name</string>

    <!-- menu strings -->

    <string name="importstr">Import</string>
    <string name="scan">Scan QR/Barcode</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="create_folder">Create folder</string>
    <string name="appversion">App Version</string>
    <string name="recent">Recent</string>
    <string name="allfolder">All Folders</string>
    <string name="hide">Hide</string>

    <string name="delete_folder">Delete folder</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_image">Delete Image</string>





    <string name="custom_ui">custom UI disables certain standard permissions needed by</string>
    <string name="need_enable">you need to enable them for</string>
    <string name="towork">to work.</string>


    <!-- menu strings -->



</resources>
