<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_select"
        android:title="@string/menu_selectAll"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/menu_item_delete"
        app:showAsAction="always"/>

    <item  android:id="@+id/action_Share"
        android:title="@string/share"/>

    <item  android:id="@+id/action_rename"
        android:title="@string/rename"/>

    <item  android:id="@+id/action_private"
        android:title="@string/hide"/>

    <item  android:id="@+id/action_details"
        android:title="@string/details"/>


</menu>