<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@color/colorAccent"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/headertxt"
                android:text="@string/actions_create"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/sp20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <EditText
            android:layout_below="@+id/header"
            android:layout_margin="@dimen/dp10"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginBottom="@dimen/dp40"
            android:hint="@string/enter_folder_name"
            android:id="@+id/Edit_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <TextView
            android:layout_below="@+id/Edit_folder"
            android:id="@+id/View_create"
            android:text="@string/create_txt"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/Edit_folder"
            android:id="@+id/View_cancel"
            android:text="@string/cancel_txt"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:textColor="@color/colorAccent"
            android:layout_toLeftOf="@+id/View_create"
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>