<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <EditText
      android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:text="fileName"
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context=".activity.CropImageActivity">

        <com.theartofdev.edmodo.cropper.CropImageView

            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            custom:cropInitialCropWindowPaddingRatio="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cropButton"
                android:layout_width="wrap_content"
                android:minWidth="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="2"
                android:background="@drawable/cornered_edges"
                android:text="@string/save_countinue"
                android:textAllCaps="false"
                android:singleLine="true"
                android:textColor="@color/white"
                android:layout_marginLeft="2dp" />

            <Button
                android:id="@+id/rotateButton"
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="2"
                android:background="@drawable/cornered_edges"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/rotate"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginLeft="4dp" />

            <ImageView
                android:id="@+id/previousImageButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:contentDescription="@string/previous_image_content_desc"
                android:gravity="center"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_navigate_before_white_24dp"
                tools:targetApi="lollipop"
                android:layout_marginLeft="5dp"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/imagecount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/image_count" />

            <ImageView
                android:id="@+id/nextimageButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:contentDescription="@string/nextimage_contentdesc"
                android:gravity="center"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_navigate_next_black_24dp"
                tools:targetApi="lollipop"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>